test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/void/mismatched_conditional.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[41]:
  void
  identifier(foo)
  (
  void
  )
  {
  return
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(3)
  ;
  int
  identifier(flag)
  =
  const int(4)
  ;
  identifier(flag)
  ?
  identifier(foo)
  (
  )
  :
  (
  identifier(a)
  =
  const int(3)
  )
  ;
  return
  const int(0)
  ;
  }
